--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 web/node_modules
+
+### Dart template
+# Don’t commit the following directories created by pub.
+.buildlog
+.pub/
+build/
+packages
+.packages
+
+# Include when developing application packages.
+pubspec.lock
+
+.idea
